# C_dev_system

./: README.md
.github/prompts/: dev_log.prompt.md
.github/workflows/: build.yml
coplit_review/: review_f052f8ca35876ac48ee699633e63fb89b30a6042.txt
four_operations/: CMakeLists.txt
four_operations/dev_log/: dev_log_4b8efe2.txt  dev_log_8e4cda0.txt  dev_log_8f51c76.txt  dev_log_a07350d.txt  dev_log_a9a0941.txt  dev_log_f052f8c.txt  dev_log_f30b7e9.txt
four_operations/include/: four_operations.h
four_operations/src/: CMakeLists.txt  four_operations.c  main.c
four_operations/test/: CMakeLists.txt  test_four_operations.cc
